[gd_scene load_steps=8 format=3 uid="uid://bkbl1reru73m3"]

[ext_resource type="Script" uid="uid://c5eekx45bax25" path="res://scripts/tools/robot_picker.gd" id="1_3eptv"]
[ext_resource type="PackedScene" uid="uid://tewieaav2nax" path="res://assets/tool_meshes/robot_picker.tscn" id="2_ecfq4"]

[sub_resource type="Animation" id="Animation_p7puk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.89788, -0.442315, -1.07658)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.341116, -1.75328, -0.0922655)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("litterArea:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1gklb"]
_data = {
&"RESET": SubResource("Animation_p7puk")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_3eptv"]
height = 0.6
radius = 0.7

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ecfq4"]
height = 0.4

[sub_resource type="CylinderShape3D" id="CylinderShape3D_h5s4u"]
height = 0.6
radius = 0.9

[node name="robotPicker" type="CharacterBody3D"]
transform = Transform3D(-0.15039, -0.344305, -0.926735, -0.086826, 0.938374, -0.334539, 0.984807, 0.0301534, -0.171016, 0.89788, -0.442315, -1.07658)
collision_layer = 0
script = ExtResource("1_3eptv")
pickup_paper = true
pickup_plastic = true
pickup_metal = true
pickup_glass = true
tool_name = "robot_picker"

[node name="pickerAnim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1gklb")
}

[node name="pickerMesh" parent="." instance=ExtResource("2_ecfq4")]
layers = 2

[node name="litterArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 120
monitoring = false

[node name="litterCol" type="CollisionShape3D" parent="litterArea"]
transform = Transform3D(1, -2.07499e-06, 0, -1.11759e-08, 1, -2.43541e-07, -4.47035e-08, 8.43778e-07, 1, 0, 0, 0)
shape = SubResource("CylinderShape3D_3eptv")

[node name="robotCol" type="CollisionShape3D" parent="."]
transform = Transform3D(1, -7.50646e-07, 0, -1.11759e-08, 1, -2.43541e-07, -4.47035e-08, 2.46335e-07, 1, 0, 0, 0)
shape = SubResource("CylinderShape3D_ecfq4")

[node name="pickupArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="pickupCol" type="CollisionShape3D" parent="pickupArea"]
transform = Transform3D(1, -2.24635e-06, 0, -1.11759e-08, 1, -2.43541e-07, -4.47035e-08, 8.74046e-07, 1, 0, 0, 0)
shape = SubResource("CylinderShape3D_h5s4u")
